Fix: Removed horizontal scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,9 @@
 
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
+
 }
 :root {
   --newGreen: #00c094;
@@ -158,6 +161,8 @@ html {
   }
   body {
     @apply bg-background text-foreground;
+    max-width: 100%;
+    overflow-x: hidden;
 
   }
 
